test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET_api_private_unauth_nds_defaultMongoDBMajorVersion_1.snaphost
HTTP/2.0 200 OK
Content-Length: 3
Content-Type: text/plain
Date: Tue, 09 Sep 2025 18:15:45 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
Vary: Accept-Encoding
X-Content-Type-Options: nosniff
X-Frame-Options: DENY
X-Mongodb-Service-Version: gitHash=2dd276f5858806ffd578852f539065f80160e49b; versionString=master
X-Permitted-Cross-Domain-Policies: none
X-Xgen-Up-Proto: HTTP/2

8.0